# dx-vc-file-transfer

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: python-tests.yml
dx_vc_file_transfer/: dnanexus.py  http_request.py  varsome.py
dx_vc_file_transfer/cli/: config.py  logger.py  transfer_files.py
tests/: test_dnanexus.py  test_http_request.py  test_varsome.py
tests/cli/: test_config.py  test_transfer_files.py
